--- a/public/index.html
+++ b/public/index.html
@@ -2,14 +2,14 @@ hi
 <h5> Version 0.0.3</h5>
 <h1 align=center>index.html for game dev by fred <h1>
   
-<li> <a href="hi">my github repository full url</a>
+<li> <a href="..">my github repository full url</a>
 <li> <a href="..">My game dev website full url</a>
 <hr>
   
   <h3 The following only need the exact file name</h3>
   <li><a href="t1a01-basic-web-page-fred2.html">t1a02-basic-web-page-fred2.html</a>
   <li><a href="t1a01-lists-tables-fred2.html">t1a02-lists-tables-fred2.html</a>
-  <li><a href"..">https://mannysekhon.github.io/Game-development-2023/</a>
+  <li><a href"..">wsg</a>
   <li><a href"..">...</a>
   <li><a href"..">...</a>
   <li><a href"..">...</a>
