--- a/public/index.html
+++ b/public/index.html
@@ -2,7 +2,7 @@ hi
 <h5> Version 0.0.3</h5>
 <h1 align=center>index.html for game dev by fred <h1>
   
-<li> <a href="..">my github repository full url</a>
+<li> <a href="https://github.com/MannySekhon/Game-development-2023/edit/main/public/index.html">my github repository full url</a>
 <li> <a href="..">My game dev website full url</a>
 <hr>
   
