--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,7 @@ hi
   <h3 The following only need the exact file name</h3>
   <li><a href="t1a01-basic-web-page-fred2.html">t1a02-basic-web-page-fred2.html</a>
   <li><a href="t1a01-lists-tables-fred2.html">t1a02-lists-tables-fred2.html</a>
-  <li><a href"https://github.com/MannySekhon/Game-development-2023/edit/main/public/index.html">https://github.com/MannySekhon/Game-development-2023/edit/main/public/index.html</a>
+  <li><a href"..">...</a>
   <li><a href"..">...</a>
   <li><a href"..">...</a>
   <li><a href"..">...</a>
