--- a/public/index.html
+++ b/public/index.html
@@ -3,7 +3,7 @@ hi
 <h1 align=center>index.html for game dev by fred <h1>
   
 <li> <a href="..">my github repository full url</a>
-<li> <a href="..">My game dev website full url</a>
+<li> <a href="https://github.com/MannySekhon/Game-development-2023">My game dev website full url</a>
 <hr>
   
   <h3 The following only need the exact file name</h3>
