--- a/public/index.html
+++ b/public/index.html
@@ -1,6 +1,6 @@
 hi
 <h5> Version 0.0.3</h5>
-<h1 align=center>index.html for game dev by fred <h1>
+<h1 align=center>index.html for game dev by Manvir <h1>
   
 <li> <a href="..">my github repository full url</a>
 <li> <a href="https://github.com/MannySekhon/Game-development-2023">My game dev website full url</a>
