--- a/public/index.html
+++ b/public/index.html
@@ -13,3 +13,17 @@ hi
   <li><a href"..">...</a>
   <li><a href"..">...</a>
   <li><a href"..">...</a>
+<html>
+  <head>
+    <title> basic web stuff </title>
+  </head>
+  <body>
+    <h5>Version 0.0.1</h5>
+    <h1 align=center>T3A04-Web Basics by Manvir.html </h1>
+    
+    <href="http:////www.google.ca">Link to Google</a><br>
+    Plain text </b> and </i> can you put them together<br>
+    <hr>
+    This is an image <br>
+    <img width="300" src="https://i.pinimg.com/originals/9a/e5/61/9ae561111f5987e31f287ca0ba8d3957.jpg"><br><br>
+    
