--- a/public/index.html
+++ b/public/index.html
@@ -39,7 +39,28 @@ hi
        document .getElementbyId('myDiv01').innerHTML = 'hello don\'t World'
                                                        }">
     <input type= button value="1. variables" onclick="{
-                                       docuent.getElementbyId('myDiv01').innerHTML = ' variables are values that can change depending on conditions<br>'
+                                       docuent.getElementById('myDiv01').innerHTML = ' variables are values that can change depending on conditions<br>'
                                                       }">
-    
-          
+    <input type=button value="2. Input/output" onclick="{document.grtElementById('myDiv01').innerHTML = 'Input is a way to to feed some data into a program. Output is the data that comes out of a program<br>'
+    }">
+    <input type= button value="3. Decisions" onclick="{
+                                       docuent.getElementById('myDiv01').innerHTML = ' Decisions use the if statement tru false variable decisions<br>'
+    }">
+    <input type= button value="4. Events" onclick="{
+                                       docuent.getElementById('myDiv01').innerHTML = ' Events are actions that do something. For example, a button is an event <br>'
+                                      }">
+    <input type= button value="5. Objects" onclick="{
+                                       docuent.getElementById('myDiv01').innerHTML = ' An Object could be variables, functions and data structures<br>'
+                                                    }">
+    <input type= button value="6. Functions" onclick="{
+                                       docuent.getElementById('myDiv01').innerHTML = ' A function is code that accomplishes a specific task<br>'
+                                                      }">
+    <input type= button value="7. Loops" onclick="{
+                                       docuent.getElementById('myDiv01').innerHTML = ' Loops are instructios that repeat untill a condition is met<br>'
+                                                  }">
+    <input type= button value="8. Arrays" onclick="{
+                                       docuent.getElementById('myDiv01').innerHTML = ' Arrays are data structures<br>'
+                                                   }">
+    <input type= button value="9. Classes" onclick="{
+                                       docuent.getElementById('myDiv01').innerHTML = ' Classes are like coding templates you can get from online<br>'
+                                                    }">
