--- a/public/index.html
+++ b/public/index.html
@@ -18,7 +18,7 @@ hi
     <title> basic web stuff </title>
   </head>
   <body>
-    <h5>Version 0.0.1</h5>
+    <h5>Version 0.0.4</h5>
     <h1 align=center>T3A04-Web Basics by Manvir.html </h1>
     
     <href="http:////www.google.ca">Link to Google</a><br>
@@ -27,14 +27,14 @@ hi
     <hr>
     This is an image of my favorite rapper <br>
     <img width="300" src="https://i.pinimg.com/originals/9a/e5/61/9ae561111f5987e31f287ca0ba8d3957.jpg"><br><br>
-    youtube embedded video <br>
+    One of his music videos <br>
     <iframe width="560" height="315" src="https://www.youtube.com/embed/tBKYI3-3lMg" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
    <hr>
     <div>This is a </div>
     <div>div</div>
-    <span> This is </span>
+    <span>This is </span>
     <span a span</span>
-    <h3> Write about Ellis' 10 main areas of coding</h3>
+    <h3> <align=center>10 main areas of coding</h3>
     <input type=button value "0. Pseudo code" onclick="{
        document .getElementbyId('myDiv01').innerHTML = 'hello don\'t World'
                                                        }">
@@ -64,3 +64,4 @@ hi
     <input type= button value="9. Classes" onclick="{
                                        docuent.getElementById('myDiv01').innerHTML = ' Classes are like coding templates you can get from online<br>'
                                                     }">
+    
