--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@ hi
 <hr>
   
   <h3 The following only need the exact file name</h3>
-  <li><a href="t1a01-basic-web-page-fred2.html">t1a02-basic-web-page-fred2.html</a>
+  <li><a href="t1a01-basic-web-page-fred2.html">t3a01-basic-web-page-fred2.html</a>
   <li><a href="t1a01-lists-tables-fred2.html">t1a02-lists-tables-fred2.html</a>
   <li><a href"..">...</a>
   <li><a href"..">...</a>
@@ -15,11 +15,11 @@ hi
   <li><a href"..">...</a>
 <html>
   <head>
-    <title> basic web stuff </title>
+    <title> Manvir's web stuff </title>
   </head>
   <body>
-    <h5>Version 0.0.4</h5>
-    <h1 align=center>T3A04-Web Basics by Manvir.html </h1>
+    <h5>Version 0.0.5</h5>
+    <h1 align=center>T3A02-Web Basics by Manvir.html </h1>
     
     <href="http:////www.google.ca">Link to Google</a><br>
     Plain text </b> and </i> can you put them together<br>
@@ -64,4 +64,21 @@ hi
     <input type= button value="9. Classes" onclick="{
                                        docuent.getElementById('myDiv01').innerHTML = ' Classes are like coding templates you can get from online<br>'
                                                     }">
-    
+      <h5>Version 0.0.2</h5>   
+      <h1 align=center>T1A03-Lists-and-tables-by-Manvir</h1>
+      <h2> Lists</h2>
+      <ol> Ordered list of fav foods
+        <li> Pizza
+          <li> Fries
+            <li> Chicken
+              <li> Ramen
+                <li> Blueberries
+                  <li> Strawberries
+      </ol>
+      <ul> Unordered list of countries
+        <li> Canada
+          <li> Russia
+            <li> Argentina
+              <li> Brazil
+                <li> United States of America
+                  <li>
