--- a/public/index.html
+++ b/public/index.html
@@ -81,4 +81,7 @@ hi
             <li> Argentina
               <li> Brazil
                 <li> United States of America
-                  <li>
+                  <li> Portugal
+                    <li> Spain
+      </ul>
+      <b> Assignments</br>
