--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,7 @@ hi
   <h3 The following only need the exact file name</h3>
   <li><a href="t1a01-basic-web-page-fred2.html">t3a01-basic-web-page-fred2.html</a>
   <li><a href="t1a01-lists-tables-fred2.html">t1a02-lists-tables-fred2.html</a>
-  <li><a href"T3A03-lists-and-tables-by-Manvir.html">T3A03-lists-and-tables-by-Manvir.html</a>
+  <li><a href"T3A03-lists-and-tables-by-Manvir.html">T3A03</a>
   <li><a href"..">...</a>
   <li><a href"..">...</a>
   <li><a href"..">...</a>
