--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@ hi
 <hr>
   
   <h3 The following only need the exact file name</h3>
-  <li><a href="t3a01-basic-web-page-fred2.html">t3a01-basic-web-page-Manvir.html</a>
+  <li><a href="T1A02-basic-web-page.html">t3a01-basic-web-page-Manvir.html</a>
   <li><a href="t1a01-lists-tables-fred2.html">t1a02-lists-tables-fred2.html</a>
   <li><a href"T3A03-lists-and-tables-by-Manvir.html">T3A03</a>
   <li><a href"..">...</a>
