--- a/public/T3A03-lists-and-tables-by-Manvir.html
+++ b/public/T3A03-lists-and-tables-by-Manvir.html
@@ -18,4 +18,4 @@
                   <li> Portugal
                     <li> Spain
       </ul>
-      <b> Assignments</br>
+      <b> Assignments</b>
