--- a/public/T3A03-lists-and-tables-by-Manvir.html
+++ b/public/T3A03-lists-and-tables-by-Manvir.html
@@ -18,4 +18,6 @@
                   <li> Portugal
                     <li> Spain
       </ul>
-      <b> Assignments</b>
+      <b> Assignments</b>. You make a list inside a list of multiple items<br>
+<h2> Tables </h2>
+<table border
