--- a/public/index.html
+++ b/public/index.html
@@ -9,8 +9,8 @@ hi
   <h3 The following only need the exact file name</h3>
   <li><a href="T1A02-basic-web-page.html">t3a01-basic-web-page-Manvir.html</a>
   <li><a href="t1a01-lists-tables-Manvir.html">t1a02-lists-tables-Manvir.html</a>
-  <li><a href"T3A03-lists-and-tables-by-Manvir.html">T3A03-lists-and-tables-by-Manvir.html</a>
-  <li><a href"T3AR-Manvir.html">T3AR-Manvir.html</a>
+  <li><a href="T3A03-lists-and-tables-by-Manvir.html">T3A03-lists-and-tables-by-Manvir.html</a>
+  <li><a href="T3AR-Manvir.html">T3AR-Manvir.html</a>
   <li><a href"..">...</a>
   <li><a href"..">...</a>
 
