--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,7 @@ hi
 <li> <a href="..">my github repository full url</a>
 <li> <a href="https://github.com/MannySekhon/Game-development-2023">My game dev website full url</a>
 <hr>
-<body style="background-color:powderblue;">
+<body style="background-color:powderred;">
   <h3 The following only need the exact file name</h3>
   <li><a href="T1A02-basic-web-page.html">t3a01-basic-web-page-Manvir.html</a>
   <li><a href="t1a01-lists-tables-Manvir.html">t1a02-lists-tables-Manvir.html</a>
