--- a/public/index.html
+++ b/public/index.html
@@ -11,7 +11,7 @@ hi
   <li><a href="t1a01-lists-tables-Manvir.html">t1a02-lists-tables-Manvir.html</a>
   <li><a href="T3A03-lists-and-tables-by-Manvir.html">T3A03-lists-and-tables-by-Manvir.html</a>
   <li><a href="T3AR-Manvir.html">T3AR-Manvir.html</a>
-  <li><a href"..">...</a>
-  <li><a href"..">...</a>
+  <li><a href="..">...</a>
+  <li><a href="..">...</a>
 
   
