--- a/public/index.html
+++ b/public/index.html
@@ -1,6 +1,6 @@
 hi
-<h5> Version 0.0.4</h5>
-<h1 align=center>index.html for game dev by Manvir <h1>
+<h5> Version 0.0.7</h5>
+<h1 align=center> Game Dev by Manvir <h1>
   
 <li> <a href="..">my github repository full url</a>
 <li> <a href="https://github.com/MannySekhon/Game-development-2023">My game dev website full url</a>
