--- a/public/index.html
+++ b/public/index.html
@@ -2,7 +2,7 @@ hi
 <h5> Version 0.0.7</h5>
 <h1 align=center> Game Dev by Manvir <h1>
   
-<li> <a href="..">my github repository full url</a>
+<li> <a href="https://mannysekhon.github.io/Game-development-2023/public/index.html">my github repository full url</a>
 <li> <a href="https://github.com/MannySekhon/Game-development-2023">My game dev website full url</a>
 <hr>
 <body style="background-color:powderblue;">
