--- a/public/T1A02-basic-web-page.html
+++ b/public/T1A02-basic-web-page.html
@@ -4,7 +4,7 @@
   <body>
     <h5>Version 0.0.5</h5>
     <h1 align=center>T3A02-Web Basics by Manvir.html </h1>
-    
+    <body style="background-color:powderblue;">
     <href="http:////www.google.ca">Link to Google</a><br>
     Plain text </b> and </i> can you put them together<br>
     <b><i>Bold and Italic</i></b><br>
