--- a/public/T3AR-Manvir.html
+++ b/public/T3AR-Manvir.html
@@ -1,5 +1,5 @@
 <input type="text" id="myTextIn01" value="Input/Output" size="30">  
-    
+  <body style="background-color:powderblue;">  
 <input id="myButton123" type="button" value="Input / Output" onclick="{
       document.getElementById('myDiv123').innerHTML = document.getElementById('myTextIn01').value // note: use value not innerHTML                                                    
 }"><br><br>
