--- a/public/index.html
+++ b/public/index.html
@@ -1,5 +1,5 @@
 hi
-<h5> Version 0.0.7</h5>
+<h5> Version 0.0.9</h5>
 <h1 align=center> Game Dev by Manvir <h1>
   
 <li> <a href="https://mannysekhon.github.io/Game-development-2023/public/index.html">my github repository full url</a>
@@ -13,5 +13,14 @@ hi
   <li><a href="T3AR-Manvir.html">T3AR-Manvir.html</a>
   <li><a href="..">...</a>
   <li><a href="..">...</a>
-
+  <li><a href="..">...</a>
+  <li><a href="..">...</a>
+  <li><a href="..">...</a>
+  <li><a href="..">...</a>
+  <li><a href="..">...</a>
+  <li><a href="..">...</a>
+  <li><a href="..">...</a>
+  <li><a href="..">...</a>
+  <li><a href="..">...</a>
+  <li><a href="..">...</a>
   
