--- a/public/index.html
+++ b/public/index.html
@@ -11,7 +11,7 @@ hi
   
   <li><a href="T3A03-lists-and-tables-by-Manvir.html">T3A03-lists-and-tables-by-Manvir.html</a>
   <li><a href="T3AR-Manvir.html">T3AR-Manvir.html</a>
-  <li><a href="..">...</a>
+  <li><a href="t3a03-forms-Manvir.html">t3a03-forms-Manvir.html</a>
   <li><a href="..">...</a>
   <li><a href="..">...</a>
   <li><a href="..">...</a>
