--- a/public/t3a03-forms-Manvir.html
+++ b/public/t3a03-forms-Manvir.html
@@ -5,7 +5,7 @@ The following are all form elements (add to them):<br>
 Enter Your First Name:<input type=text id="myText01" value="Manvir"><br>
 Checkbox: <br>
 Beef:<input type=checkbox><br>
-Veggy: <input type=checkbox>‹br>
+Veggy: <input type=checkbox><br>
 Radio Buttons:<br>
 107.7 <input type=radio name="myRad0l" value="a"<br>
 83.5 <input type=radio name="myRad0l"value="b"<br>
@@ -19,7 +19,7 @@ document.getElementById('myArea01').value = 'Cool'
 Textarea: <br>
   <textarea id="myAreal" cols=60 rows=5 > wow </textarea><br>
 Select Box:<BR>
-  <select id="mySelect01" size=2> 
+  <select id="mySelect01" size=4> 
     <option value= 'myOne'>One 
       <option value= 'myTwo'>Two 
     <option value= 'myThree'>Three
