--- a/public/t3a03-forms-Manvir.html
+++ b/public/t3a03-forms-Manvir.html
@@ -7,11 +7,11 @@ Checkbox: <br>
 Beef:<input type=checkbox><br>
 Veggy: <input type=checkbox><br>
 Radio Buttons:<br>
-107.7 <input type=radio name="myRad0l" value="a"<br>
-83.5 <input type=radio name="myRad0l"value="b"<br>
-hidden: <input type=hidden›<br>
+107.7 <input type=radio name="myRad0l" value="a"><br>
+83.5 <input type=radio name="myRad0l"value="b"><br>
+hidden: <input type=hidden><br>
 File:<input type=file><br>
-reset:<input type =reset›<br>
+reset:<input type =reset><br>
 Submit (advanced)<input type=submit><br>
 Button: <input type=button value="click" onclick="{
 document.getElementById('myArea01').value = 'Cool'
