--- a/public/t3a03-forms-Manvir.html
+++ b/public/t3a03-forms-Manvir.html
@@ -6,9 +6,10 @@ Enter Your First Name:<input type=text id="myText01" value="Manvir"><br>
 Checkbox: <br>
 Beef:<input type=checkbox><br>
 Veggy: <input type=checkbox><br>
-Radio Buttons:<br>
-107.7 <input type=radio name="myRad0l" value="a"><br>
-83.5 <input type=radio name="myRad0l"value="b"><br>
+What do you like most?:<br>
+Mustang <input type=radio name="myRad0l" value="a"><br>
+Camaro <input type=radio name="myRad0l"value="b"><br>
+  Charger/Challenger <input type=radio name="myRad0l"value="c"><br>
 hidden: <input type=hidden><br>
 File:<input type=file><br>
 reset:<input type =reset><br>
@@ -17,7 +18,7 @@ Button: <input type=button value="click" onclick="{
 document.getElementById('myArea01').value = 'Cool'
 }"><br>
 Textarea: <br>
-  <textarea id="myAreal" cols=60 rows=5 > wow </textarea><br>
+  <textarea id="myAreal" cols=60 rows=5 > Please give me an A </textarea><br>
 Select Box:<BR>
   <select id="mySelect01" size=4> 
     <option value= 'myOne'>One 
