--- a/public/t3a03-forms-Manvir.html
+++ b/public/t3a03-forms-Manvir.html
@@ -3,23 +3,23 @@
 The following are all form elements (add to them):<br>
 <form >
 Enter Your First Name:<input type=text id="myText01" value="Manvir"><br>
-Checkbox: <br>
+Checkbox: <br> <br>
 Beef:<input type=checkbox><br>
 Veggy: <input type=checkbox><br>
 What do you like most?:<br>
 Mustang <input type=radio name="myRad0l" value="a"><br>
 Camaro <input type=radio name="myRad0l"value="b"><br>
-  Charger/Challenger <input type=radio name="myRad0l"value="c"><br>
-hidden: <input type=hidden><br>
-File:<input type=file><br>
-reset:<input type =reset><br>
-Submit (advanced)<input type=submit><br>
+  Charger/Challenger <input type=radio name="myRad0l"value="c"><br><br>
+hidden: <input type=hidden><br><br>
+File:<input type=file><br><br>
+reset:<input type =reset><br><br>
+Submit (advanced)<input type=submit><br><br>
 Button: <input type=button value="click" onclick="{
 document.getElementById('myArea01').value = 'Cool'
-}"><br>
+}"><br><br>
 Textarea: <br>
   <textarea id="myAreal" cols=60 rows=5 > Please give me an A </textarea><br>
-Select Box:<BR>
+Select Box:<BR><br>
   <select id="mySelect01" size=4> 
     <option value= 'myOne'>One 
       <option value= 'myTwo'>Two 
