--- a/public/t3a03-forms-Manvir.html
+++ b/public/t3a03-forms-Manvir.html
@@ -3,9 +3,9 @@
 The following are all form elements (add to them):<br>
 <form >
 Enter Your First Name:<input type=text id="myText01" value="Manvir"><br>
-Checkbox: <br> <br>
+Checkbox: <br> 
 Beef:<input type=checkbox><br>
-Veggy: <input type=checkbox><br>
+Veggy: <input type=checkbox><br><br>
 What do you like most?:<br>
 Mustang <input type=radio name="myRad0l" value="a"><br>
 Camaro <input type=radio name="myRad0l"value="b"><br>
@@ -19,7 +19,7 @@ document.getElementById('myArea01').value = 'Cool'
 }"><br><br>
 Textarea: <br>
   <textarea id="myAreal" cols=60 rows=5 > Please give me an A </textarea><br>
-Select Box:<BR><br>
+Select Box:<BR>
   <select id="mySelect01" size=4> 
     <option value= 'myOne'>One 
       <option value= 'myTwo'>Two 
