--- a/public/t3a03-forms-Manvir.html
+++ b/public/t3a03-forms-Manvir.html
@@ -2,10 +2,13 @@
 <font color=blue> Prove you can use: Forms</font>
 The following are all form elements (add to them):<br>
 <form >
-Enter Your First Name:<input type=text id="myText01" value="Manvir"><br>
-Checkbox: <br> 
-Beef:<input type=checkbox><br>
-Veggy: <input type=checkbox><br><br>
+Enter Your First Name:<input type=text id="myText01" value="Manvir"><br><br>
+What goes in a ceasar salad?: <br> 
+Beef <input type=checkbox><br>
+Lettuce <input type=checkbox><br><br>
+  Ceasar Dressing <input type=checkbox><br>
+  Croutons <input type=checkbox><br>
+  Boeng 747 <input type=checkbox><br>
 What do you like most?:<br>
 Mustang <input type=radio name="myRad0l" value="a"><br>
 Camaro <input type=radio name="myRad0l"value="b"><br>
