--- a/public/t3a03-forms-Manvir.html
+++ b/public/t3a03-forms-Manvir.html
@@ -5,10 +5,10 @@ The following are all form elements (add to them):<br>
 Enter Your First Name:<input type=text id="myText01" value="Manvir"><br><br>
 What goes in a ceasar salad?: <br> 
 Beef <input type=checkbox><br>
-Lettuce <input type=checkbox><br><br>
+Lettuce <input type=checkbox><br>
   Ceasar Dressing <input type=checkbox><br>
   Croutons <input type=checkbox><br>
-  Boeng 747 <input type=checkbox><br>
+  Boeng 747 <input type=checkbox><br><br>
 What do you like most?:<br>
 Mustang <input type=radio name="myRad0l" value="a"><br>
 Camaro <input type=radio name="myRad0l"value="b"><br>
