--- a/public/index.html
+++ b/public/index.html
@@ -1,5 +1,5 @@
 hi
-<h5> Version 0.0.9</h5>
+<h5> Version 0.0.10</h5>
 <h1 align=center> Game Dev by Manvir <h1>
   
 <li> <a href="https://mannysekhon.github.io/Game-development-2023/public/index.html">my github repository full url</a>
@@ -12,7 +12,7 @@ hi
   <li><a href="T3A03-lists-and-tables-by-Manvir.html">T3A03-lists-and-tables-by-Manvir.html</a>
   <li><a href="T3AR-Manvir.html">T3AR-Manvir.html</a>
   <li><a href="t3a03-forms-Manvir.html">t3a03-forms-Manvir.html</a>
-  <li><a href="..">...</a>
+  <li><a href="t3a04-CSS-Manvir.html">t3a04-CSS-Manvir.html</a>
   <li><a href="..">...</a>
   <li><a href="..">...</a>
   <li><a href="..">...</a>
