--- a/public/t3a04-CSS-Manvir.html
+++ b/public/t3a04-CSS-Manvir.html
@@ -18,3 +18,4 @@ document.getElementById('myB1').style.BackgroundColour= 'yellow'
 }"><br>
 <textara style="position:relitive; left:100; top:100; width:1100; hight:75; "> Advanced, move this text area
 </textarea><br>
+<body style="background-color:powderblue;">
