--- a/public/t3a04-CSS-Manvir.html
+++ b/public/t3a04-CSS-Manvir.html
@@ -6,7 +6,7 @@ Properly done with a css file listing all css comands for your website<br>
 Another was to do css (Cascading Style Sheets: determine colours, locations and the extra effects on the tags for your web page)<br>
 Here is typical in document style
 <pre>
-b { colour: #000ff00;
+b { colour: #21ff21;
 }
 </pre><br>
 I do CSS inside the tag. It over powers all other methods<br>
