--- a/public/t3a04-CSS-Manvir.html
+++ b/public/t3a04-CSS-Manvir.html
@@ -1,4 +1,4 @@
-Version 0.0.2</br>
+Version 0.0.3</br>
 <h1 align=center> T3A04 CSS by Manvir</h1>
 Reference Link <br>
 a< href="https://www.w3schools.com/cssref/default.asp">w3schools</a><br>
@@ -6,8 +6,7 @@ Properly done with a css file listing all css comands for your website<br>
 Another was to do css (Cascading Style Sheets: determine colours, locations and the extra effects on the tags for your web page)<br>
 Here is typical in document style
 <pre>
-b { colour: #21ff21;
-}
+<b> { colour: #00ff00; }
 </pre><br>
 I do CSS inside the tag. It over powers all other methods<br>
 <b> This is bold</b><br>
