--- a/public/t3a04-CSS-Manvir.html
+++ b/public/t3a04-CSS-Manvir.html
@@ -1,4 +1,4 @@
-Version 0.0.3</br>
+Version 0.0.4</br>
 <h1 align=center> T3A04 CSS by Manvir</h1>
 Reference Link <br>
 a< href="https://www.w3schools.com/cssref/default.asp">w3schools</a><br>
@@ -18,3 +18,4 @@ document.getElementById('myB1').style.BackgroundColour= 'yellow'
 <textara style="position:relitive; left:100; top:100; width:1100; hight:75; "> Advanced, move this text area
 </textarea><br>
 <body style="background-color:powderblue;">
+{cursor: crosshair;}
