--- a/public/t3a04-CSS-Manvir.html
+++ b/public/t3a04-CSS-Manvir.html
@@ -1,4 +1,4 @@
-Version 0.0.4</br>
+Version 0.0.5</br>
 <h1 align=center> T3A04 CSS by Manvir</h1>
 Reference Link <br>
 <a href="https://www.w3schools.com/cssref/default.asp">w3schools</a><br>
@@ -6,14 +6,16 @@ Properly done with a css file listing all css comands for your website<br>
 Another was to do css (Cascading Style Sheets: determine colours, locations and the extra effects on the tags for your web page)<br>
 Here is typical in document style
 <pre>
-<b> { colour: #00ff00; }
+b { 
+colour: #00ff00; 
+}
 </pre><br>
 I do CSS inside the tag. It over powers all other methods<br>
 <b> This is bold</b><br>
 <b id="myB1" style=colour:00ff00; background-Colour:blue; "> This is bold</b>
 <input type=button value=Change onclick="{
-document.getElementById('myB1').style.colour= 'red'
-document.getElementById('myB1').style.BackgroundColour= 'yellow' 
+document.getElementById('myB1').style.color= 'red'
+document.getElementById('myB1').style.backgroundColor= 'yellow' 
 }"><br>
 <textara style="position:relitive; left:100; top:100; width:1100; hight:75; "> Advanced, move this text area
 </textarea><br>
