--- a/public/t3a04-CSS-Manvir.html
+++ b/public/t3a04-CSS-Manvir.html
@@ -20,3 +20,9 @@ document.getElementById('myB1').style.backgroundColor= 'yellow'
 <textara style="position:relitive; left:100; top:100; width:1100; hight:75; "> Advanced, move this text area
 </textarea><br>
 <body style="background-color:powderblue;">
+
+                                          
+                                          p {
+  border: 2px solid powderblue;
+  margin: 50px;
+}
