--- a/public/T3A03-lists-and-tables-by-Manvir.html
+++ b/public/T3A03-lists-and-tables-by-Manvir.html
@@ -1,4 +1,4 @@
-<h5>Version 0.0.7</h5>   
+<h5>Version 0.0.8</h5>   
       <h1 align=center>T1A03-Lists-and-tables-by-Manvir</h1>
       <h2> Lists</h2>
       <ol> Ordered list of fav foods
@@ -19,7 +19,22 @@
                     <li> Spain
       </ul>
       <b> Assignments</b>. You make a list inside a list of multiple items<br>
-<h2> Tables </h2>
+<ol>  <li> Parts of a car
+      <ul>
+      <li> Door 
+            <li> Trunk
+                  <li> Hood
+                        <li> Fender
+      </ul>
+      <li> Provences (not all)
+            <ul> 
+                  <li>British Columbia
+                        <li> Alberta
+                              <li> Ontario
+                                    <li> New Brunswick
+            </ul>
+</ol>
+<h2> Tables </h2><br>
 <table border=1>
       <tr><td>A</td><td>B</td></tr>
       <tr><td>1</td><td>2</td></tr>
