--- a/public/t3a04-CSS-Manvir.html
+++ b/public/t3a04-CSS-Manvir.html
@@ -1,7 +1,7 @@
-Version 0.0.5</br>
+Version 0.0.6</br>
 <h1 align=center> T3A04 CSS by Manvir</h1>
 Reference Link <br>
-<a href="https://www.w3schools.com/cssref/default.asp">w3schools</a><br>
+<b><a href="https://www.w3schools.com/cssref/default.asp">w3schools</a></b><br>
 Properly done with a css file listing all css comands for your website<br>
 Another was to do css (Cascading Style Sheets: determine colours, locations and the extra effects on the tags for your web page)<br>
 Here is typical in document style
@@ -21,3 +21,4 @@ document.getElementById('myB1').style.backgroundColor= 'yellow'
 </textarea><br>
 <body style="background-color:powderblue;">
 
+              cursor: crosshair;<b> Try hovering over this sentence. </b>
