--- a/public/t3a04-CSS-Manvir.html
+++ b/public/t3a04-CSS-Manvir.html
@@ -1,4 +1,4 @@
-Version 0.0.7</br>
+Version 0.0.7.5</br>
 <h1 align=center> T3A04 CSS by Manvir</h1>
 Reference Link <br>
 <b><a href="https://www.w3schools.com/cssref/default.asp">w3schools</a></b><br>
@@ -19,9 +19,9 @@ document.getElementById('myB1').style.backgroundColor= 'yellow'
 }"><br>
 <textara style="position:relitive; left:0; top:0; width:100; hight:75; "> Advanced, move this text area
 </textarea><br>
-<body style="background-color:powderblue;">
+<body style="background-color:powderblue;"><br>
 
-              cursor: crosshair;<b> Try hovering over this sentence. </b>
+              cursor: crosshair;<b> Try hovering over this sentence. </b><br>
                                           
                                           
                                           /* Keyword value */
