--- a/public/t3a04-CSS-Manvir.html
+++ b/public/t3a04-CSS-Manvir.html
@@ -1,4 +1,4 @@
-Version 0.0.6</br>
+Version 0.0.7</br>
 <h1 align=center> T3A04 CSS by Manvir</h1>
 Reference Link <br>
 <b><a href="https://www.w3schools.com/cssref/default.asp">w3schools</a></b><br>
@@ -22,3 +22,5 @@ document.getElementById('myB1').style.backgroundColor= 'yellow'
 <body style="background-color:powderblue;"><br>
 
         .crosshair {cursor: crosshair;}
+div { mousovr
+    cursor:crosshair;}
