--- a/public/t3a04-CSS-Manvir.html
+++ b/public/t3a04-CSS-Manvir.html
@@ -1,4 +1,4 @@
-Version 0.0.7</br>
+Version 0.0.8</br>
 <h1 align=center> T3A04 CSS by Manvir</h1>
 Reference Link <br>
 <b><a href="https://www.w3schools.com/cssref/default.asp">w3schools</a></b><br>
@@ -24,3 +24,39 @@ document.getElementById('myB1').style.backgroundColor= 'yellow'
         .crosshair {cursor: crosshair;}
 div { mousovr
     cursor:crosshair;}
+                                          <head>
+<style>
+html {
+  scroll-behavior: smooth;
+}
+
+#section1 {
+  height: 600px;
+  background-color: pink;
+}
+
+#section2 {
+  height: 600px;
+  background-color: yellow;
+}
+</style>
+</head>
+<body>
+
+<h1>Smooth Scroll</h1>
+
+<div class="main" id="section1">
+  <h2>Section 1</h2>
+  <p>Click on the link to see the "smooth" scrolling effect.</p>
+  <a href="#section2">Click Me to Smooth Scroll to Section 2 Below</a>
+  <p>Note: Remove the scroll-behavior property to remove smooth scrolling.</p>
+</div>
+
+<div class="main" id="section2">
+  <h2>Section 2</h2>
+  <a href="#section1">Click Me to Smooth Scroll to Section 1 Above</a>
+</div>
+
+<p><strong>Note:</strong> The scroll-behavior property is not supported in Internet Explorer.</p>
+
+</body>
