--- a/public/t3a04-CSS-Manvir.html
+++ b/public/t3a04-CSS-Manvir.html
@@ -60,3 +60,45 @@ html {
 <p><strong>Note:</strong> The scroll-behavior property is not supported in Internet Explorer.</p>
 
 </body>
+                     
+                     
+                     <head>
+<style>
+body {
+  background-color:#E7E9EB;
+}
+#myDIV {
+  height:300px;
+  background-color:#FFFFFF;
+  padding: 10px;
+}
+#div1 {
+  position: relative;
+  margin: auto;
+  height: 150px;
+  width: 200px;
+  padding: 10px;
+  border: 1px solid black;
+}
+
+#div2 {
+  padding: 50px;
+  position: absolute;
+  border: 1px solid black;
+  background-color: red;
+  rotate: z 30deg;
+}
+</style>
+</head>
+<body>
+
+<h1>The rotate property</h1>
+
+<div id="myDIV">
+  <div id="div1">DIV1
+    <div id="div2">DIV2</div>
+  </div>
+  <p>Try "1 1 0 60deg" as value for rotate. The first three values represent a vector for the element to rotate around.</p>
+</div>
+
+</body>
