--- a/public/t3a04-CSS-Manvir.html
+++ b/public/t3a04-CSS-Manvir.html
@@ -160,3 +160,7 @@ function changeRot()
 
  
 </body>
+
+               
+               
+               <b style= ".crosshair {cursor: crosshair;}">Hover over this</b>
