--- a/public/t3a04-CSS-Manvir.html
+++ b/public/t3a04-CSS-Manvir.html
@@ -163,4 +163,4 @@ function changeRot()
 
                
                
-               <b style= ".crosshair {cursor: crosshair;}">Hover over this</b>
+               <b style= "border-style:groove;border-colour:purple;">Do you like the border?</b>
