--- a/public/t3a04-CSS-Manvir.html
+++ b/public/t3a04-CSS-Manvir.html
@@ -1,4 +1,4 @@
-Version 0.0.9</br>
+Version 0.1.9</br>
 <h1 align=center> T3A04 CSS by Manvir</h1>
 Reference Link <br>
 <b><a href="https://www.w3schools.com/cssref/default.asp">w3schools</a></b><br>
@@ -163,4 +163,6 @@ function changeRot()
 
                
                
-               <b style= "border-style:groove;border-colour:purple;">Do you like the border?</b>
+               <b style= "border-style:groove;border-colour:purple;">Do you like the border?</b><br>
+                                                                    <b style= "cursor-style:crosshair;">Hover over this writing</b>
+                                                                    <b style= "
