--- a/public/t3a04-CSS-Manvir.html
+++ b/public/t3a04-CSS-Manvir.html
@@ -1,4 +1,4 @@
-Version 0.1.9</br>
+Version 0.1.0</br>
 <h1 align=center> T3A04 CSS by Manvir</h1>
 Reference Link <br>
 <b><a href="https://www.w3schools.com/cssref/default.asp">w3schools</a></b><br>
@@ -159,5 +159,8 @@ function changeRot()
                
                
                <b style= "border-style:groove;border-colour:purple;">Do you like the border?</b><br>
-                                                                    <b style= "cursor-style:crosshair;">Hover over this writing</b>
-                                                                    <b style= "
+         <b style= "cursor-style:crosshair;">Hover over this writing</b>
+   body {
+ background-image: url("https://images.squarespace-cdn.com/content/v1/5938ae92d1758e7df363adf4/1554412234801-WSP7QO46S0KB3M6WA8Q2/nipsey.jpg");
+ background-color: #cccccc;
+}
