--- a/public/t3a04-CSS-Manvir.html
+++ b/public/t3a04-CSS-Manvir.html
@@ -164,3 +164,28 @@ function changeRot()
  background-image: url("https://images.squarespace-cdn.com/content/v1/5938ae92d1758e7df363adf4/1554412234801-WSP7QO46S0KB3M6WA8Q2/nipsey.jpg");
  background-color: #cccccc;
 }
+                                                                                                                                             
+   <head>
+<style> 
+div {
+  width: 100px;
+  height: 100px;
+  background: red;
+  position: relative;
+  animation: mymove 5s infinite;
+}
+
+@keyframes mymove {
+  from {left: 0px;}
+  to {left: 200px;}
+}
+</style>
+</head>
+<body>
+
+<h1>The animation Property</h1>
+
+<p>The animation lasts for 5 seconds. It then starts over again, and goes on forever.</p>
+<div></div>
+
+</body>                                                                                                                                          
