--- a/public/t3a04-CSS-Manvir.html
+++ b/public/t3a04-CSS-Manvir.html
@@ -188,4 +188,23 @@ div {
 <p>The animation lasts for 5 seconds. It then starts over again, and goes on forever.</p>
 <div></div>
 
-</body>                                                                                                                                          
+</body>        
+                                                                                                                                             
+                                                                                                                                             
+                                                                                                                                             <head>
+<style> 
+div {
+  background-color: red;
+  opacity: 0.8;
+}
+</style>
+</head>
+<body>
+
+<h1>The opacity Property</h1>
+
+<p>The following div element's opacity is 0.8. Note that both the text and the background-color are affected by the opacity level:</p>
+
+<div>This is the opacity property</div>
+
+</body>
