--- a/public/t3a04-CSS-Manvir.html
+++ b/public/t3a04-CSS-Manvir.html
@@ -162,7 +162,7 @@ function changeRot()
  
 
                                                                                                                                              
-{   <head>
+   <head>
 <style> 
 div {
   width: 100px;
