--- a/public/t3a04-CSS-Manvir.html
+++ b/public/t3a04-CSS-Manvir.html
@@ -1,4 +1,4 @@
-Version 0.1.3</br>
+Version 0.1.4</br>
 <h1 align=center> T3A04 CSS by Manvir</h1>
 Reference Link <br>
 <b><a href="https://www.w3schools.com/cssref/default.asp">w3schools</a></b><br>
@@ -314,4 +314,33 @@ div {
     newBoxesDiv.appendChild(newDiv);
   }
 </script>
+</body>
+
+                                 
+                                 <head>
+<style>
+h1 {
+  text-decoration: overline;
+}
+
+h2 {
+  text-decoration: line-through;
+}
+
+h3 {
+  text-decoration: underline;
+}
+
+h4 {
+  text-decoration: underline overline;
+}
+</style>
+</head>
+<body>
+
+<h1>This is heading 1</h1>
+<h2>This is heading 2</h2>
+<h3>This is heading 3</h3>
+<h4>This is heading 4</h4>
+
 </body>
