--- a/public/index.html
+++ b/public/index.html
@@ -13,7 +13,7 @@ hi
   <li><a href="T3AR-Manvir.html">T3AR-Manvir.html</a>
   <li><a href="t3a03-forms-Manvir.html">t3a03-forms-Manvir.html</a>
   <li><a href="t3a04-CSS-Manvir.html">t3a04-CSS-Manvir.html</a>
-  <li><a href="..">...</a>
+  <li><a href="T3A05-input-output-Manvir.html">T3A05-input-output-Manvir.html</a>
   <li><a href="..">...</a>
   <li><a href="..">...</a>
   <li><a href="..">...</a>
