--- a/public/T3A05-input-output-Manvir.html
+++ b/public/T3A05-input-output-Manvir.html
@@ -1,12 +1,12 @@
-Version 0.0.2
+Version 0.0.3
 <h2 align=center›T3A05-input output by Manvir</h2)
 <a href="https://www.w3schools.com/jsref/prop_html_innerhtml.asp">Good reference to input output
 Javascript innerHTML value by Manvir</a>
 <h4> Example input output code</h4> 
 <pre>
 
-let myIn01 = document. getElementById( 'myNum01' ).value
-document.getElementById('myDiv0l').innerHTML - myIn01 + ' squared ' = + myIn0l*myIn0l
+let myIn01 = document.getElementById( 'myNum01' ).value
+document.getElementById('myDiv0l').innerHTML = myIn01 + ' squared ' = + myIn0l*myIn0l
 
 <h4> Example working code</h4>
 <input id-"myNum0l" type=number value="4" ><br>
