--- a/public/T3A05-input-output-Manvir.html
+++ b/public/T3A05-input-output-Manvir.html
@@ -1,4 +1,4 @@
-Version 0.0.5
+Version 0.0.6
 <h2 align=center›T3A05-input output by Manvir</h2)
 <a href="https://www.w3schools.com/jsref/prop_html_innerhtml.asp">Good reference to input output
 Javascript innerHTML value by Manvir</a>
@@ -14,8 +14,7 @@ document.getElementById('myDiv0l').innerHTML = myIn01 + ' squared ' = + myIn0l*m
 let myIn01 = parseFloat (document.getElementById('myNum0l*).value)
 let mAnswer = mvIn01 * myIn01
 document. getElementById('myDiv01').innerHTML =
-mvIn01 + squared =
-'+ myAnswer
+myIn01 + ' squared = ' + myAnswer
 }"><br>
 <div id="myDiv0l">...</div>
 <body style="background-color:powderblue;">
