--- a/public/T3A05-input-output-Manvir.html
+++ b/public/T3A05-input-output-Manvir.html
@@ -1,4 +1,4 @@
-Version 0.0.8
+Version 0.0.9
 <h2 align=center›T3A05-input output by Manvir</h2)
 <a href="https://www.w3schools.com/jsref/prop_html_innerhtml.asp">Good reference to input output
 Javascript innerHTML value by Manvir</a>
@@ -12,7 +12,7 @@ document.getElementById('myDiv0l').innerHTML = myIn01 + ' squared ' = + myIn0l*m
 <input id="myNum0l" type=number value="4" ><br>
 <input type=button value="Click for answer" onclick="{
 let myIn01 = parseFloat (document.getElementById('myNum0l').value)
-let myAnswer = mvIn01 * myIn01
+let myAnswer = myIn01 * myIn01
 document.getElementById('myDiv01').innerHTML =
 myIn01 + ' squared = ' + myAnswer
 }"><br>
