--- a/public/index.html
+++ b/public/index.html
@@ -14,7 +14,7 @@ hi
   <li><a href="t3a03-forms-Manvir.html">t3a03-forms-Manvir.html</a>
   <li><a href="t3a04-CSS-Manvir.html">t3a04-CSS-Manvir.html</a>
   <li><a href="T3A05-input-output-Manvir.html">T3A05-input-output-Manvir.html</a>
-  <li><a href="..">...</a>
+  <li><a href="T3A06-Variables-Manvir">T3A06-Variables-Manvir</a>
   <li><a href="..">...</a>
   <li><a href="..">...</a>
   <li><a href="..">...</a>
