Update and rename T3A07-Decisions-Manvir to T3A07-Decisions-Manvir.html

--- a/public/T3A07-Decisions-Manvir.html
+++ b/public/T3A07-Decisions-Manvir.html
@@ -22,4 +22,11 @@ let myIn01 = parseFloat(document.getElementById('myNum01').value)
 if (myIn01 >= 3){
 document.getElement.Id('myDiv01').innerhtml= myIn01 = 'is greater than 3'
 } else {
-document.getElement.Id('myDiv01').innerhtml= myIn01 = 'is less than 3'
+document.getElement.Id('myDiv01').innerhtml= myIn01 = 'is less than 3' }
+}">
+<input type=button value="complex if" onclick="{
+let myIn01 = parsefloat(document.getElementById('myNum01').value)
+if ((myIn01 != 3 || myIn01 > -3) && myIn01 <=100 ){
+document.getElementById('myDiv01').innerhtml = myIn01 + ' is complex'
+} else {document.getElementById('myDiv01').innerhtml = myIn01 + ' is not complex'
+}">
