--- a/public/index.html
+++ b/public/index.html
@@ -15,7 +15,7 @@ hi
   <li><a href="t3a04-CSS-Manvir.html">t3a04-CSS-Manvir.html</a>
   <li><a href="T3A05-input-output-Manvir.html">T3A05-input-output-Manvir.html</a>
   <li><a href="T3A06-Variables-Manvir">T3A06-Variables-Manvir.html</a>
-  <li><a href="..">...</a>
+  <li><a href="T3A07-Decisions-Manvir.html">T3A07-Decisions-Manvir.html</a>
   <li><a href="..">...</a>
   <li><a href="..">...</a>
   <li><a href="..">...</a>
