--- a/public/T3A07-Decisions-Manvir.html
+++ b/public/T3A07-Decisions-Manvir.html
@@ -30,3 +30,4 @@ if ((myIn01 != 3 || myIn01 > -3) && myIn01 <=100 ){
 document.getElementById('myDiv01').innerhtml = myIn01 + ' is complex'
 } else {document.getElementById('myDiv01').innerhtml = myIn01 + ' is not complex'
 }">
+<body style="background-color:powderblue;">
