--- a/public/T3A07-Decisions-Manvir.html
+++ b/public/T3A07-Decisions-Manvir.html
@@ -1,4 +1,4 @@
-Version 0.0.2
+Version 0.0.3
 <h2 align=center>T3A07 Decisions by Manvir</h2>
 <as href="https://www.w3schools.com/js/js_if_else.asp">Good reference to decisions if ... else statements.
 Javascript innerHTML value by Manvir</a><br>
@@ -13,9 +13,7 @@ let myGreeting = 'Good day';
 <h4>Example Working Code</h4>
 <input id= "myNum01" type=number value="4"> <br>
 <input type=button value"simple if statement for decision making" onclick="{let myIn01 = parseFloat(document.getElementById('myNum01').value)
-if (myIn01>= 3){
-document.getElementById('myDiv01').innerHTML =myIn01 = ' is greater than 3'
-}
+if (myIn01>= 3){document.getElementById('myDiv01').innerHTML =myIn01='is greater than 3'}
 }">
 <input type=button value="if...else" onclick"{
 let myIn01 = parseFloat(document.getElementById('myNum01').value)
