--- a/public/T3A07-Decisions-Manvir.html
+++ b/public/T3A07-Decisions-Manvir.html
@@ -1,4 +1,4 @@
-Version 0.0.4
+Version 0.0.5
 <h2 align=center>T3A07 Decisions by Manvir</h2>
 <as href="https://www.w3schools.com/js/js_if_else.asp">Good reference to decisions if ... else statements.
 Javascript innerHTML value by Manvir</a><br>
@@ -22,10 +22,9 @@ document.getElement.Id('myDiv01').innerhtml= myIn01 = 'is greater than 3'
 } else {
 document.getElement.Id('myDiv01').innerhtml= myIn01 = 'is less than 3' }
 }">
-<input type=button value="complex if" onclick="{
-let myIn01 = parsefloat(document.getElementById('myNum01').value)
+<input type=button value="complex if" onclick="{let myIn01 = parsefloat(document.getElementById('myNum01').value)
 if ((myIn01 !=3 || myIn01 > -3) && myIn01 <=100 ){
 document.getElementById('myDiv01').innerhtml = myIn01 + ' is complex'
-} else {document.getElementById('myDiv01').innerhtml = myIn01 + ' is not complex'
+} else {document.getElementById('myDiv01').innerhtml = myIn01 + ' is not complex'}
 }">
 <body style="background-color:powderblue;">
