--- a/public/index.html
+++ b/public/index.html
@@ -16,7 +16,7 @@ hi
   <li><a href="T3A05-input-output-Manvir.html">T3A05-input-output-Manvir.html</a>
   <li><a href="T3A06-Variables-Manvir">T3A06-Variables-Manvir.html</a>
   <li><a href="T3A07-Decisions-Manvir.html">T3A07-Decisions-Manvir.html</a>
-  <li><a href="T3A08-loops-Manvir">T3A08-loops-Manvir</a>
+  <li><a href="T3A08-loops-Manvir.html">T3A08-loops-Manvir.html</a>
   <li><a href="..">...</a>
   <li><a href="..">...</a>
   <li><a href="..">...</a>
