--- a/public/T3A08-loops-Manvir.html
+++ b/public/T3A08-loops-Manvir.html
@@ -1,4 +1,4 @@
-Version 0.0.1
+Version 0.0.2
 <h2 align=center>t3a08-loops-by-Manvir.html</h2>
 <a href=" ">Good reference to Javascript Loops</a><br>
 <h4> Example input output code</ h4>
@@ -31,3 +31,10 @@ document. getElementById('myDiv01'). innerHTML = myTemp
 <input type=button value="Even number identifier" onclick=" {
 document. getElementById('myDiv01').innerHTML= myTemp
 }”>
+<script>
+                                                           function myExampleFunction(){
+                                                           let myIn01 = parseInt(docuent.getElementById('myText01').value)
+                                                           let mySum = myIn01 + myIn01
+                                                           let myReply = myIn01 + ' + ' + myIn01 + ' = ' + mySum
+                                                           return myReply
+                                                           }
