--- a/public/T3A08-loops-Manvir.html
+++ b/public/T3A08-loops-Manvir.html
@@ -38,3 +38,4 @@ document. getElementById('myDiv01').innerHTML= myTemp
                                                            let myReply = myIn01 + ' + ' + myIn01 + ' = ' + mySum
                                                            return myReply
                                                            }
+        <body style="background-color:powderblue;">
