--- a/public/T3A06-Variables-Manvir.html
+++ b/public/T3A06-Variables-Manvir.html
@@ -1,4 +1,4 @@
-Version 0.0.1
+Version 0.0.2
 <h2 align=center>t1a06 variables by Manvir.html</h2>
 <a href="..."You fix Good reference to Variables in Javascript and other languages</a><br>
 Other Languages use: bool, int, float, char, string, int_8, int_16 etc<br>
@@ -10,11 +10,11 @@ document.getElementById('mydiv01').innerhtml = myIn01
 </pre>
 <h4> Example working code </h4>
 <input id="mytext01" type=text value="The Dog"> <br>
-<input=button value="Show Variable" onclick="{
+<input type=button value="Show Variable" onclick="{
 let myIn01 = document.getElementByID('myText01').value=
 document.getElementById('myDiv01').innerhtml= myIn01
 }"><br>
-<input=button value="Using no Variable" onclick="{
+<input type=button value="Using no Variable" onclick="{
 document.getElementById('myDiv01').innerhtml=
 document.getElementById(myDiv01').value
 }"><br>
