--- a/public/T3A06-Variables-Manvir.html
+++ b/public/T3A06-Variables-Manvir.html
@@ -11,7 +11,7 @@ document.getElementById('mydiv01').innerhtml = myIn01
 <h4> Example working code </h4>
 <input id="mytext01" type=text value="The Dog"> <br>
 <input type=button value="Show Variable" onclick="{
-let myIn01 = document.getElementByID('myText01').value=
+let myIn01 = document.getElementByID('myText01').value
 document.getElementById('myDiv01').innerhtml= myIn01
 }"><br>
 <input type=button value="Using no Variable" onclick="{
