--- a/public/T3A06-Variables-Manvir.html
+++ b/public/T3A06-Variables-Manvir.html
@@ -19,3 +19,4 @@ document.getElementById('myDiv01').innerhtml=
 document.getElementById(myDiv01').value
 }"><br>
 <div id="myDiv01">...</div>
+<body style="background-color:powderblue;">
