--- a/public/T3A06-Variables-Manvir.html
+++ b/public/T3A06-Variables-Manvir.html
@@ -1,4 +1,4 @@
-Version 0.0.2
+Version 0.0.3
 <h2 align=center>t1a06 variables by Manvir.html</h2>
 <br>
 Other Languages use: bool, int, float, char, string, int_8, int_16 etc<br>
@@ -16,7 +16,7 @@ document.getElementById('myDiv01').innerhtml= myIn01
 }"><br>
 <input type=button value="Using no Variable" onclick="{
 document.getElementById('myDiv01').innerhtml=
-document.getElementById(myDiv01').value
+document.getElementById(myText01').value
 }"><br>
 <div id="myDiv01">...</div>
 <body style="background-color:powderblue;">
