--- a/public/T3A06-Variables-Manvir.html
+++ b/public/T3A06-Variables-Manvir.html
@@ -1,4 +1,4 @@
-Version 0.0.6
+Version 0.0.7
 <h2 align=center>t1a06 variables by Manvir.html</h2>
 <br>
 Other Languages use: bool, int, float, char, string, int_8, int_16 etc<br>
@@ -9,7 +9,7 @@ let myin01 = document.getElementById('myText01').value
 document.getElementById('mydiv01').innerhtml = myIn01
 </pre>
 <h4> Example working code </h4>
-<input id="myText01" type=text value="The Dog"> <br>
+<input id="myText01" type=text value="How are you?"> <br>
 <input type=button value="Show Variable" onclick="{
 let myIn01 = document.getElementById('myText01').value
 document.getElementById('myDiv01').innerhtml= myIn01
@@ -19,3 +19,5 @@ document.getElementById('myDiv01').innerhtml=document.getElementById('myText01')
 }"> <br>
 <div id="myDiv01">...</div>
 <body style="background-color:powderblue;">
+myText01 = wassa
+  myDiv01 = wassu
