--- a/public/T3A06-Variables-Manvir.html
+++ b/public/T3A06-Variables-Manvir.html
@@ -15,7 +15,9 @@ let myIn01 = document.getElementById('myText01').value
 document.getElementById('myDiv01').innerhtml= myIn01
 }"> <br>
 <input type=button value="Using no Variable" onclick="{
-document.getElementById('myDiv01').innerhtml=document.getElementById('myText01').value
+document.getElementById('myDiv01').innerhtml =
+document.getElementById('myText01').value
 }"> <br>
 <div id="myDiv01">...</div>
+
 <body style="background-color:powderblue;">
