--- a/public/T3A07-Decisions-Manvir.html
+++ b/public/T3A07-Decisions-Manvir.html
@@ -1,6 +1,6 @@
-Version 0.0.5
+Version 0.0.6
 <h2 align=center>T3A07 Decisions by Manvir</h2>
-<as href="https://www.w3schools.com/js/js_if_else.asp">Good reference to decisions if ... else statements.
+<a href="https://www.w3schools.com/js/js_if_else.asp">Good reference to decisions if ... else statements.
 Javascript innerHTML value by Manvir</a><br>
 Note: !=Not, &&=And,   =or <br>
 <h4> Example Input Output Code</h4>
