--- a/public/T3A07-Decisions-Manvir.html
+++ b/public/T3A07-Decisions-Manvir.html
@@ -18,9 +18,9 @@ if (myIn01 >= 3){document.getElementById('myDiv01').innerHTML =myIn01='is greate
 <input type=button value="if...else" onclick"{
 let myIn01 = parseFloat(document.getElementById('myNum01').value)
 if (myIn01 >=3){
-document.getElementById('myDiv01').innerhtml= myIn01 = 'is greater than 3'
+document.getElementById('myDiv01').innerhtml= myIn01 + 'is greater than 3'
 } else {
-document.getElementById('myDiv01').innerhtml= myIn01 = 'is less than 3' }
+document.getElementById('myDiv01').innerhtml= myIn01 + 'is less than 3' }
 }">
 <input type=button value="complex if" onclick="{let myIn01 = parsefloat(document.getElementById('myNum01').value)
 if ((myIn01 !=3 || myIn01 > -3) && myIn01 <=100 ){
