--- a/public/T3A07-Decisions-Manvir.html
+++ b/public/T3A07-Decisions-Manvir.html
@@ -1,4 +1,4 @@
-Version 0.0.8
+Version 0.0.9
 <h2 align=center>T3A07 Decisions by Manvir</h2>
 <a href="https://www.w3schools.com/js/js_if_else.asp">Good reference to decisions if ... else statements.
 Javascript innerHTML value by Manvir</a><br>
@@ -27,4 +27,5 @@ if ((myIn01 !=3 || myIn01 > -3) && myIn01 <=100 ){
 document.getElementById('myDiv01').innerhtml = myIn01 + ' is complex'
 } else {document.getElementById('myDiv01').innerhtml = myIn01 + ' is not complex'}
 }">
+<div id="myDiv01">...</div>
 <body style="background-color:powderblue;">
