--- a/public/T3A07-Decisions-Manvir.html
+++ b/public/T3A07-Decisions-Manvir.html
@@ -1,4 +1,4 @@
-Version 0.0.9
+Version 0.0.10
 <h2 align=center>T3A07 Decisions by Manvir</h2>
 <a href="https://www.w3schools.com/js/js_if_else.asp">Good reference to decisions if ... else statements.
 Javascript innerHTML value by Manvir</a><br>
@@ -15,17 +15,28 @@ let myGreeting = 'Good day';
 <input type=button value="simple if statement for decision making" onclick="{let myIn01 = parseFloat(document.getElementById('myNum01').value)
 if (myIn01 >= 3){document.getElementById('myDiv01').innerHTML =myIn01='is greater than 3'}
 }">
+
+
 <input type=button value="if...else" onclick"{
 let myIn01 = parseFloat(document.getElementById('myNum01').value)
-if (myIn01 >=3){
-document.getElementById('myDiv01').innerhtml= myIn01 + ' is greater than 3'
+if (myIn01 >= 3){
+   document.getElementById('myDiv01').innerhtml= myIn01 + ' is greater than 3'
 } else {
-document.getElementById('myDiv01').innerhtml= myIn01 + ' is less than 3' }
+   document.getElementById('myDiv01').innerhtml= myIn01 + ' is less than 3' }
 }">
-<input type=button value="complex if" onclick="{let myIn01 = parsefloat(document.getElementById('myNum01').value)
-if ((myIn01 !=3 || myIn01 > -3) && myIn01 <=100 ){
-document.getElementById('myDiv01').innerhtml = myIn01 + ' is complex'
-} else {document.getElementById('myDiv01').innerhtml = myIn01 + ' is not complex'}
+
+
+
+<input type=button value="complex if" onclick="{
+   let myIn01 = parsefloat(document.getElementById('myNum01').value)
+   if ((myIn01 !=3 || myIn01 > -3) && myIn01 <=100 ){
+       document.getElementById('myDiv01').innerhtml = myIn01 + ' is complex'
+   } else {
+      document.getElementById('myDiv01').innerhtml = myIn01 + ' is not complex'
+   }
 }">
+
+
+
 <div id="myDiv01">...</div>
 <body style="background-color:powderblue;">
