--- a/public/T3A07-Decisions-Manvir.html
+++ b/public/T3A07-Decisions-Manvir.html
@@ -1,4 +1,4 @@
-Version 0.0.10
+Version 0.0.11
 <h2 align=center>T3A07 Decisions by Manvir</h2>
 <a href="https://www.w3schools.com/js/js_if_else.asp">Good reference to decisions if ... else statements.
 Javascript innerHTML value by Manvir</a><br>
@@ -12,8 +12,11 @@ let myGreeting = 'Good day';
 </pre>
 <h4>Example Working Code</h4>
 <input id= "myNum01" type=number value="4"> <br>
-<input type=button value="simple if statement for decision making" onclick="{let myIn01 = parseFloat(document.getElementById('myNum01').value)
-if (myIn01 >= 3){document.getElementById('myDiv01').innerHTML =myIn01='is greater than 3'}
+<input type=button value="simple if statement for decision making" onclick="{
+   let myIn01 = parseFloat(document.getElementById('myNum01').value)
+   if (myIn01 >= 3){
+         document.getElementById('myDiv01').innerHTML =myIn01='is greater than 3'
+   }
 }">
 
 
@@ -28,7 +31,7 @@ if (myIn01 >= 3){
 
 
 <input type=button value="complex if" onclick="{
-   let myIn01 = parsefloat(document.getElementById('myNum01').value)
+   let myIn01 = parseFloat(document.getElementById('myNum01').value)
    if ((myIn01 !=3 || myIn01 > -3) && myIn01 <=100 ){
        document.getElementById('myDiv01').innerhtml = myIn01 + ' is complex'
    } else {
