--- a/public/T3A06-Variables-Manvir.html
+++ b/public/T3A06-Variables-Manvir.html
@@ -1,4 +1,4 @@
-Version 0.0.6
+Version 0.0.7
 <h2 align=center>t3a06 variables by Manvir.html</h2>
 <br>
 Other Languages use: bool, int, float, char, string, int_8, int_16 etc<br>
@@ -6,16 +6,16 @@ Note: Javascript does use var and let for local variables.<br>
 For Global variables Mr. Ellis prefers to use document.myVarName
 <h4> Example input output code</h4> <pre>
 let myin01 = document.getElementById('myText01').value
-document.getElementById('mydiv01').innerhtml = myIn01
+document.getElementById('myDiv01').innerHTML = myIn01
 </pre>
 <h4> Example working code </h4>
 <input id="myText01" type=text value="How are you?"> <br>
 <input type=button value="Show Variable" onclick="{
 let myIn01 = document.getElementById('myText01').value
-document.getElementById('myDiv01').innerhtml= myIn01
+document.getElementById('myDiv01').innerHTML= myIn01
 }"> <br>
 <input type=button value="Using no Variable" onclick="{
-document.getElementById('myDiv01').innerhtml =
+document.getElementById('myDiv01').innerHTML =
 document.getElementById('myText01').value
 }"> <br>
 <div id="myDiv01">...</div>
