--- a/public/T3A08-loops-Manvir.html
+++ b/public/T3A08-loops-Manvir.html
@@ -1,4 +1,4 @@
-Version 0.0.2
+Version 0.0.3
 <h2 align=center>t3a08-loops-by-Manvir.html</h2>
 <a href=" ">Good reference to Javascript Loops</a><br>
 <h4> Example input output code</ h4>
@@ -9,13 +9,13 @@ Max loops: <input id="myNum01" type=number value="4" ><br>
 weird number: <input id="myWeird" type=number value="2" ><br>
 <input type-button value="Basic For loop with Decisions" onclick="{
 document.getElementById('myDiv01').innerHTML
-let myTemp = ‘1’
+let myTemp = ''
 let myMax = parseInt(document.getElementById('myNum01'). value)
 for (let myLoop = 0; myLoop < myMax; myLoop++ ){
 if (myLoop * 2 > myMax) {
-myTemp += ‘ cool’
+myTemp += ' coo'
 }
-myTemp += ‘Loop number:’ + myLoop +  ‘<br>’
+myTemp += 'Loop number:' + myLoop +  '<br>'
 }
 }">
 document. getElementById ('myDiv01') .innerHTML = myTemp
@@ -26,14 +26,14 @@ let myMax = parseInt (document. getElementById ( 'myNum01'). value)
 for (let myLoop = O; myLoop < myMax; myLoop++ ){
 myTemp += 'Loop number: '
 ' + myLoop + '<br>
-document. getElementById('myDiv01'). innerHTML = myTemp
+document. getElementById('myDiv01').innerHTML = myTemp
 }">
 <input type=button value="Even number identifier" onclick=" {
 document. getElementById('myDiv01').innerHTML= myTemp
-}”>
+}">
 <script>
                                                            function myExampleFunction(){
-                                                           let myIn01 = parseInt(docuent.getElementById('myText01').value)
+                                                           let myIn01 = parseInt(document.getElementById('myText01').value)
                                                            let mySum = myIn01 + myIn01
                                                            let myReply = myIn01 + ' + ' + myIn01 + ' = ' + mySum
                                                            return myReply
