--- a/public/T3A08-loops-Manvir.html
+++ b/public/T3A08-loops-Manvir.html
@@ -1,4 +1,4 @@
-Version 0.0.4
+Version 0.0.5
 <h2 align=center>t3a08-loops-by-Manvir.html</h2>
 <a href=" ">Good reference to Javascript Loops</a><br>
 <h4> Example input output code</ h4>
@@ -27,10 +27,10 @@ document. getElementById ('myDiv01').innerHTML = myTemp
 <input type-button value="Basic For loop only" onclick="{
 let myTemp
 -
-let myMax = parseInt (document. getElementById ('myNum01'). value)
+let myMax = parseInt (document.getElementById ('myNum01').value)
 for (let myLoop = O; myLoop < myMax; myLoop++ ){
-myTemp += 'Loop number: '
-' + myLoop + '<br>
+myTemp += 'Loop number:' ' + myLoop + '<br>'
+                                                        }
 document. getElementById('myDiv01').innerHTML = myTemp
 }">
 <input type=button value="Even number identifier" onclick=" {
